fix(node): 节点管理
